# audit-service

./: .env.example  .gitignore  ALERTING_DOCUMENTATION_SUMMARY.md  ALERTING_SERVICE_SUMMARY.md  ARCHITECTURE.md  CLONE_SETUP_GUIDE.md  DOCS_LINK_FIX.md  DOCUMENTATION_SUMMARY.md  DYNAMIC_FILTERING_SUMMARY.md  DYNAMIC_FILTERING_UI_SUMMARY.md  FASTMCP_INTEGRATION_SUMMARY.md  FINAL_SUMMARY.md  HELM_CHART_MIGRATION_SUMMARY.md  METRICS_DASHBOARD_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  RBAC_DISABLE_SUMMARY.md  README.md  SETUP.md  TEST_SUITE_SUMMARY.md  UI_FIX_SUMMARY.md  WORKING_AUDIT_TEST.md  create_databases.sql  demo_rbac_disable.py  docker-compose.dev.yml  docker-compose.yml  notes.md  quick-start.sh  run_tests.py  simple_test.py  test_alerting_integration.py  test_audit_events.py  test_audit_events_correct.py  test_db.py  test_grafana_dashboard.py  verify_alerting_ui.py
.cursor/rules/: deployment-guide.mdc
.github/workflows/: ci-cd.yml  test.yml
alerting-service/: Dockerfile  README.md  docker-compose.yml  requirements.txt
alerting-service/app/: main.py
api-gateway/: Dockerfile  main.py  requirements.txt
audit-service/: values-internal.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  2973f30baabc_add_is_default_column_to_llm_providers.py  7d9c05c602ef_add_cloud_projects_table.py  c0770f67ed65_add_is_enabled_column_to_llm_providers.py
backend/app/: __init__.py  config.py  main.py  worker.py
backend/app/api/: __init__.py  middleware.py
backend/app/api/v1/: __init__.py  audit.py  auth.py  cloud.py  health.py  llm.py  mcp.py  metrics.py
backend/app/core/: __init__.py  exceptions.py  security.py  security_hardening.py
backend/app/db/: __init__.py  database.py  schemas.py
backend/app/models/: __init__.py  audit.py  auth.py  base.py  cloud.py  llm.py  metrics.py
backend/app/services/: __init__.py  audit_service.py  auth_service.py  backup_service.py  bigquery_service.py  cache_service.py  cloud_management_service.py  dynamic_filter_service.py  llm_service.py  mcp_service.py  mock_llm_service.py  nats_service.py  pubsub_service.py  retention_service.py
backend/app/utils/: __init__.py  logging.py  metrics.py
backend/services/audit-service/app/: __init__.py  main.py
backend/services/audit-service/app/api/v1/integrations/: jira.py  pagerduty.py  stackstorm.py  webhook.py
backend/services/stackstorm-tests/: requirements.txt
backend/services/stackstorm-tests/app/: __init__.py  main.py
backend/services/stackstorm-tests/app/api/: __init__.py
backend/services/stackstorm-tests/app/api/v1/: tests.py
backend/services/stackstorm-tests/app/core/: config.py  database.py
backend/services/stackstorm-tests/app/models/: database_models.py  test_models.py
backend/services/stackstorm-tests/app/services/: incident_service.py  nats_test_examples.py  stackstorm_client.py  test_executor.py
backend/services/synthetic-tests/: Dockerfile  requirements.txt
backend/services/synthetic-tests/app/: __init__.py  main.py
backend/services/synthetic-tests/app/api/: __init__.py
backend/services/synthetic-tests/app/api/v1/: tests.py
backend/services/synthetic-tests/app/core/: config.py  database.py
backend/services/synthetic-tests/app/models/: test_models.py
backend/services/synthetic-tests/app/services/: dag_executor.py  incident_service.py  pubsub_service.py  rest_client_service.py  webhook_service.py
backend/tests/: conftest.py  test_audit_service.py  test_auth_service.py  test_basic.py
config/: nats.conf  redis.conf
docs/: ci-change-analysis.md  event-pipeline-builder.md  helm-chart-migration.md  index.html  integrations.md  monitoring.md  nats-synthetic-tests.md  outage-monitoring-limitations.md  outage-monitoring-ui.md  outage-monitoring.md  product-status.md  pubsub-subscriptions.md  stackstorm-synthetic-test-framework.md  synthetic-test-framework.md  vrl-playground.md
docs/api/: README.md
events-service/: Dockerfile  README.md  requirements.txt
events-service/app/: __init__.py  main.py
examples/: dynamic_filter_examples.py
frontend/: Dockerfile  Dockerfile.dev  README.md  app-config.yaml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/docs/: README.md  cloud-migration.md  deployment.md  developer-onboarding.md  index.html  production-readiness.md  testing-troubleshooting.md  troubleshooting.md
frontend/src/: App.tsx  index.css  index.ts
helm/: create_databases.sql
helm/audit-service/: Chart.yaml  README.md  (+4 more)
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml  serviceaccount.yaml
scripts/: analyze-changes.py  backup.sh  cleanup_duplicates.py  cleanup_duplicates.sql  deploy.sh  generate-openapi.py  init-alerting-db.sql  init-auth.py  init-db.sql  init-events-db.sql  restore.sh  run-tests.py  setup-databases.sh  setup-tests.py  start.sh  test-helm-chart.py  test-incident-api.sh
terraform/: main.tf  outputs.tf  variables.tf
tests/: README.md  README_event_processors.md  requirements.txt  run_all_e2e_tests.py  run_event_processor_tests.py  run_test_suite.py  smoke_tests.py  test_events_e2e.py
(+163 files in other folders)
